@@ -1,13 +1,13 @@
-2008-06-25  Andreas Kupries  <andreask@activestate.com>
-
-	* library/tm.tcl: Modified the handling of Tcl Modules and of the
-	* library/safe.tcl: Safe Base to interact nicely with each other,
-	* library/init.tcl: enabling requiring Tcl Modules in safe
-	interpreters. Fixes [Bug 1999119].
-
 2008-06-25  Don Porter  <dgp@users.sourceforge.net>
 
 	* changes:	Update for 8.5.3 release.
+
+2008-06-25  Andreas Kupries  <andreask@activestate.com>
+
+	* library/tm.tcl:	Modified the handling of Tcl Modules and of the
+	* library/safe.tcl:	Safe Base to interact nicely with each other,
+	* library/init.tcl:	enabling requiring Tcl Modules in safe
+	* tests/safe.test:	interpreters. Fixes [Bug 1999119].
 
 2008-06-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
@@ -20,7 +20,6 @@
 	Tcl_ObjType for the empty string value.  Problem led to a crash in
 	the command [glob -dir {} a]. [Bug 1999176].
 
->>>>>>> 1.3975.2.48
 2008-06-23  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclPathObj.c: Fixed bug in Tcl_GetTranslatedPath() when
