@@ -7221,4 +7221,6 @@ variables without "." added to customization hooks (kupries)
 
 2008-06-24 (bug fix)[1999176] crash in [glob -dir {} a] (porter)
 
+2008-06-25 (bug fix)[1999119] Support TM packages in Safe Base (kupries)
+
 --- Released 8.5.3, June 30, 2008 --- See ChangeLog for details ---
